# StudentJournal

./: AboutDialogWindow.cpp  AboutDialogWindow.h  CMakeLists.txt  LogoWidget.cpp  LogoWidget.h  NewScheduleDialog.cpp  NewScheduleDialog.h  README.md  ScheduleTableWidget.cpp  ScheduleTableWidget.h  StudentTableWidget.cpp  StudentTableWidget.h  TableAbstractWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  newStudentDialog.cpp  newStudentDialog.h
data/: schedule.csv  students.csv
utils/: csv.cpp  csv.h
